--- a/styles.css
+++ b/styles.css
@@ -40,3 +40,31 @@ h1 {
     box-shadow: 1px 2px 4px #c2185bb0;
     cursor: pointer;
 }
+
+.start-btn:hover {
+    background-color: #187bc2;
+    box-shadow: 1px 2px 4px #187bc2b0;
+}
+
+.levels {
+    font-style: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.levels > div {
+    margin: 20px;
+}
+
+.levels > div:nth-of-type(1) {
+    color: #00ff00;
+}
+
+.levels > div:nth-of-type(2) {
+    color: #ffd24e;
+}
+
+.levels > div:nth-of-type(3) {
+    color: #ff0000;
+}
