--- a/styles.css
+++ b/styles.css
@@ -68,3 +68,28 @@ h1 {
 .levels > div:nth-of-type(3) {
     color: #ff0000;
 }
+
+.game {
+    width: 600px;
+    height: 400px;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto;
+}
+
+.hole {
+    flex: 1 0 33.33%;
+    overflow: hidden;
+    position: relative;
+}
+
+.hole::after {
+    background: url('/img/hole.png') bottom center no-repeat;
+    background-size: contain;
+    content: '';
+    width: 100%;
+    height: 70px;
+    position: absolute;
+    z-index: 2;
+    bottom: -30px;
+}
